
Changelog
=========

4.2.2 (unreleased)
------------------

- Add OGDSMigrator that migrates users and inbox groups in OGDS SQL tables
  (to be used with ftw.usermigration).
  [lgraf]

- Add DossierMigrator that migrates dossier responsibles (to be used
  with ftw.usermigration).
  [lgraf]


4.2.1 (2015-03-17)
------------------

- SchemaMigration: Use IdempotentOperations only when executing migrations for MySQL.
  Also make sure that IdempotentOperations always keeps database metadata up to date.
  [deiferni]

- Upgrade: fix meeting upgrade to 4200, also migrate data, not only schema.
  [deiferni]

- Upgrade: add oracle/postgres implementation for upgrade to 4203.
  [deiferni]

- Upgrade: fix meeting upgrade to 4214, use sqlalchemy expression api as table definition
  instead of metadata.
  [deiferni]

- Upgrade: fix meeting upgrate to 4208, correctly create unique constraints.

- Fix an issue with event handlers while deleting a plone-site.
  [deiferni]

- Update translation for forwarding-transition-reassign transition.
  [phgross]

- Disable Remove GEVER content for inactive or resolved dossiers.
  [phgross]

- SchemaMigration: Make sure transaction is marked as changed even if it
  only contains DDL statements. See zope/sqlalchemy/README.txt#L145-L164
  [lgraf]

- SchemaMigration: Fix tracking table creation for DBs supporting transactional DDL:

  If the tracking table is created for the first time, it's not visible in
  metadata until the transaction has been committed.

  Therefore we need to have a method that tries to fetch an existing tracking
  table and return it, or if it doesn't exist yet, creates it and then
  returns the created table. In order to keep a reference to the tracking table
  across several SchemaMigration upgrade steps, a module global is used.

  Returning the table created by op.create_table requires alembic >= 0.7.0.
  [lgraf]

- Rename UniqueConstraints names of the SubmittedDocument table,